--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=9000
 spring.application.name=Motor Store Management
-spring.datasource.url=jdbc:sqlserver://;serverName=localhost;databaseName=motor_store;encrypt=true;trustServerCertificate=true;
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-spring.jpa.show-sql=true
+spring.datasource.url= jdbc:postgresql://localhost:5432/motorstore_db
+spring.datasource.username= postgres
+spring.datasource.password= toor
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
