--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=Motor Store Management
-spring.datasource.url= jdbc:postgresql://localhost:5432/motorstore_db
-spring.datasource.username= postgres
-spring.datasource.password= toor
+spring.datasource.url=jdbc:postgresql://localhost:5432/motorstore_db
+spring.datasource.username=postgres
+spring.datasource.password=toor
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
